--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
 
-  <meta name="description" content="MiPRINT.eco redirect">
-  <meta name="author" content="MiPRINT">
+  <meta name="description" content="WeOffset.eco redirect">
+  <meta name="author" content="WeOffset">
 
-  <meta http-equiv="Refresh" content="0; url=https://miprint.eco">
+  <meta http-equiv="Refresh" content="0; url=https://weoffset.eco">
 
 </head>
 
 <body>
-  Redirecting to <a href="https://miprint.eco">https://miprint.eco</a>
+  We re-branded as WeOffset. Redirecting to <a href="https://weoffset.eco">https://weoffset.eco</a>
 </body>
 </html>
